--- a/package.json
+++ b/package.json
@@ -27,12 +27,10 @@
   "files": [
     "README.md"
   ],
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13"
-  },
-  "dependencies": {
+    "babel-register": "^6.3.13",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "mongoose": "^4.3.3",
