chore(package): add some keywords

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "keywords": [
     "nodejs",
     "heroku",
-    "express"
+    "express",
+    "mongodb",
+    "mongoose"
   ],
   "author": "Kiki le singe",
   "license": "MIT",
