--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The kiki's social network api",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "supervisor index.js"
   },
   "engines": {
     "node": "5.3.0"
