--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "body-parser": "^1.14.2",
+    "colors": "^1.1.2",
     "express": "^4.13.3",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^4.3.3",
     "uniqid": "^1.0.0",
     "yargs": "^3.31.0"
