--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "supervisor index.js"
+    "dev": "nodemon index.js"
   },
   "engines": {
     "node": "5.3.0"
@@ -31,14 +31,14 @@
     "README.md"
   ],
   "dependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "body-parser": "^1.14.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.5.1",
+    "body-parser": "^1.15.0",
     "colors": "^1.1.2",
-    "express": "^4.13.3",
-    "mongoose": "^4.3.3",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.3",
     "uniqid": "^1.0.0",
-    "yargs": "^3.31.0"
+    "yargs": "^3.32.0"
   }
 }
